Update spring-boot version and refactor code
Bumped up spring-boot version from 2.7.3 to 3.3.0 and java version from 18 to 21 across entire project. The code was also updated to use jakarta persistence instead of javax persistence. Further, several unnecessary import statements were removed and more concise methods were used in bindings, along with addressing multiple other small code modifications. A password field was removed for security enhancements.